syntax = "proto3";

package proto;

option go_package = "github.com/MKKL1/schematic-app/server/internal/pkg/genproto";

service PostService {
  rpc GetPostById(PostByIdRequest) returns (Post) {}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
}

message PostByIdRequest {
  int64 id = 1;
}

message CreatePostRequest {
  string name = 1;
  optional string description = 2;
  optional int64 authorId = 3;
  bytes authSub = 4;
  bytes categories = 5;
  repeated Tag tags = 6;
}

message CreatePostResponse {
  int64 id = 1;
}

message Tag {
  string tag = 1;
}

message Post {
  int64 id = 1;
  string name = 2;
  optional string description = 3;
  int64 owner = 4;
  optional int64 author = 5;
  bytes categories = 6;
  repeated Tag tags = 7;
}
