syntax = "proto3";

package proto;

option go_package = "github.com/MKKL1/schematic-app/server/internal/services/post-service/domain/post/proto";

message PostEntity {
  int64 id = 1;
  string name = 2;
  optional string desc = 3;
  int64 owner = 4;
  optional string aName = 5;
  optional int64 aId = 6;
}