syntax = "proto3";

package data;

option go_package = "./;data";

message UserModel {
  int64 id = 1;
  string name = 2;
  bytes oidc_sub = 3;
}